--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,15 @@
             <version>1.0.78</version>
         </dependency>
         
-        <dependency>
+        <!-- <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
+            <version>2.0.9</version>
+        </dependency> -->
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
             <version>2.0.9</version>
         </dependency>
 
@@ -35,14 +41,14 @@
             <groupId>net.sourceforge.tess4j</groupId>
             <artifactId>tess4j</artifactId>
             <version>4.1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         
-    
-      <dependency>
-        <groupId>org.scala-tools.testing</groupId>
-        <artifactId>specs_2.10</artifactId>
-        <version>1.6.9</version>
-      </dependency>
     </dependencies>
 
 </project>
